update to java 17 and new jakarta namespace